<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="375dp"
        android:layout_height="535dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAsignacion"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#525665"
            android:text="@string/asignacion"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEstudiantes"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnCursos"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#525665"
            android:text="@string/cursos"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnDocentes"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#525665"
            android:text="@string/docentes"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCursos"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnEstudiantes"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#525665"
            android:text="@string/estudiantes"
            app:cornerRadius="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDocentes"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#BD1414"
        android:text="@string/salir"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>